tests/snapshots/basic_test__where.snap
---
source: tests/basic_test.rs
expression: policy
---
Policy {
    rules: [
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: Some(
                Equals {
                    attr: "role",
                    value: String(
                        "admin",
                    ),
                },
            ),
            reason: ReasonCode(
                1,
            ),
        },
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: Some(
                Equals {
                    attr: "role",
                    value: String(
                        "admin",
                    ),
                },
            ),
            reason: ReasonCode(
                1,
            ),
        },
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: Some(
                Not(
                    Or(
                        Equals {
                            attr: "role",
                            value: String(
                                "admin",
                            ),
                        },
                        True,
                    ),
                ),
            ),
            reason: ReasonCode(
                1,
            ),
        },
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: Some(
                Not(
                    And(
                        Equals {
                            attr: "role",
                            value: String(
                                "admin",
                            ),
                        },
                        True,
                    ),
                ),
            ),
            reason: ReasonCode(
                2,
            ),
        },
    ],
    config: PolicyConfig {
        max_rules: 1000,
        max_condition_depth: 10,
        max_context_attrs: 64,
        max_matcher_options: 64,
        max_string_len: 256,
    },
}
